Cleaned up documentation

--- a/website/content/technical/fix.qmd
+++ b/website/content/technical/fix.qmd
@@ -1,69 +1,39 @@
 # FIX Protocol Integration
 
-Rømer Chain provides seamless integration with traditional finance through native FIX protocol support. Our approach simplifies authentication while maintaining security by leveraging blockchain cryptography for session management.
+Rømer Chain provides native FIX protocol support, enabling traditional finance institutions to connect directly to the blockchain without modifying their existing trading infrastructure. Our implementation creates a seamless bridge between traditional finance and Web3 by supporting standard FIX workflows while leveraging blockchain security and capabilities.
 
-## Traditional FIX Authentication
+<div class="feature-grid">
+<div class="feature-card">
+### Secure Session Management
 
-In traditional FIX environments, firms typically handle authentication through a combination of SenderCompID and password fields in the Logon message. This approach often involves:
+Rømer Chain revolutionizes FIX session management by integrating blockchain cryptography with standard FIX workflows. Rather than managing separate credentials for each venue, market makers use their blockchain identity secured by BLS signatures for authentication and session management.
 
-- Preset credentials shared between counterparties
-- Password rotation policies
-- Complex credential management
-- Multiple authentication schemes across venues
+When establishing a session, market makers create a standard FIX Logon message with their SenderCompID, but instead of traditional password authentication, they sign the session initiation data with their BLS private key. This signature, included in the password field, provides cryptographic proof of identity that the sequencer can verify using the market maker's known public key.
 
-Session management then requires ongoing maintenance of sequence numbers and heartbeat messages to maintain connectivity. While effective, this creates significant operational overhead in managing credentials across multiple venues.
+Once authenticated, sessions proceed exactly as they would with any traditional FIX server. The sequencer manages sequence numbers, heartbeats, and message resend requests according to standard FIX protocols. This approach combines the security benefits of blockchain cryptography with the operational familiarity of traditional FIX session management, allowing market makers to maintain their existing workflows while gaining enhanced security.
+</div>
 
-## Rømer's Blockchain-Based Authentication
+<div class="feature-card">
+### Comprehensive Trading Support
 
-Rømer Chain simplifies this process by using blockchain cryptography for authentication. Instead of managing separate credentials, market makers use their blockchain identity:
+Our FIX implementation begins with robust support for fundamental order types, ensuring market makers can immediately begin trading using familiar message formats. At launch, we support market and limit orders through standard FIX messages, with execution reports and order management flowing through traditional FIX workflows.
 
-1. The market maker creates a Logon message with their SenderCompID
-2. Instead of a traditional password, they sign the session initiation data with their BLS private key
-3. This signature is included in the Logon message's password field
-4. The sequencer verifies the signature using the market maker's known public key
+The system translates these FIX messages into their blockchain equivalents in real-time, ensuring that orders execute with the security and transparency guarantees of the blockchain while maintaining FIX-standard reporting and management capabilities. Market makers can monitor positions, manage orders, and receive executions exactly as they would with any traditional venue.
 
-This approach provides several benefits:
+As the platform matures, we will systematically expand support to include advanced order types. Each new addition will be backed by corresponding on-chain functionality, ensuring that sophisticated trading strategies can leverage blockchain capabilities while maintaining standard FIX workflows. This progressive enhancement approach allows market makers to grow their trading capabilities naturally as the platform evolves.
+</div>
 
-- Single identity across the network
-- Cryptographic security
-- No separate credential management
-- Simplified authentication process
+<div class="feature-card">
+### Asset Issuance and Settlement
 
-## Session Management
+Rømer Chain introduces a standardized token framework that integrates seamlessly with existing FIX custody and settlement processes. Traditional custodians can use familiar FIX message types to issue and manage digital assets, creating a bridge between traditional custody operations and blockchain-based assets.
 
-Once authenticated, Rømer Chain creates a session key that enables standard FIX session operation:
+The system supports the full lifecycle of asset management through standard FIX messages. Custodians can issue new tokens, manage supply, and handle settlements using the same message types they currently use for traditional assets. This standardization extends to money movement as well, with support for standard FIX settlement messages to handle deposits and withdrawals.
 
-1. The sequencer generates a session key upon successful authentication
-2. This key is used for the duration of the FIX session
-3. Standard FIX session management proceeds as normal:
-   - Sequence number tracking
-   - Heartbeat messages
-   - Message resend requests
-   - Session level reject handling
+This approach creates a natural path for bringing traditional assets on-chain. Custodians can maintain their existing operational workflows while leveraging blockchain capabilities for settlement and asset management. The result is a system that combines the best of both worlds: the operational familiarity of FIX with the settlement efficiency and transparency of blockchain technology.
+</div>
+</div>
 
-Market makers can then use their established FIX session exactly as they would with any other FIX server:
+Our FIX implementation represents a thoughtful integration of traditional finance infrastructure with blockchain capabilities. By maintaining strict adherence to FIX standards while leveraging blockchain features, we create a system that feels familiar to traditional finance participants while providing the benefits of blockchain technology.
 
-- Submit new orders
-- Receive execution reports
-- Manage order modifications and cancellations
-- Handle market data
-
-## Implementation Example
-
-A typical session establishment flow:
-
-![Fix Session](../images/fix_session.png)
-
-After session establishment, trading proceeds using standard FIX messages and workflows. The sequencer handles all necessary session management tasks while providing the security benefits of blockchain-based authentication.
-
-## Integration Benefits
-
-This approach provides several key advantages for market makers:
-
-- Use existing FIX trading systems without modification
-- Maintain familiar operational workflows
-- Eliminate credential management overhead
-- Gain blockchain security benefits
-- Simplify venue connectivity
-
-Market makers can focus on their trading strategies while gaining the benefits of blockchain infrastructure without complex integration requirements.
+More detailed technical specifications about our FIX implementation will be available soon, including comprehensive message type documentation, integration guides, and example workflows.
