--- a/website/content/technical/pop.qmd
+++ b/website/content/technical/pop.qmd
@@ -1,178 +1,39 @@
-# Proof of Physics: A Novel Layer for Simplex Consensus Based on Physical Infrastructure and Network Topology
+# Proof of Physics: A Novel Approach to Blockchain Security
 
-## Abstract
-We present Proof of Physics, a novel security layer for [Simplex Consensus](https://simplex.blog/) that leverages physical infrastructure, network topology, and zero-knowledge proofs to create a secure and truly decentralized blockchain network. Built on [Commonware](https://commonware.xyz/) primitives, our system anchors security in the immutable laws of physics - specifically the speed of light and physical reality of global network infrastructure. The system achieves security through geographic distribution, jurisdictional complexity, and cryptographic verification of physical hardware, making attacks exponentially more difficult as the network grows. 
+Proof of Physics represents a fundamental reimagining of blockchain security, building upon [Simplex Consensus](https://simplex.blog/) and [Commonware](https://commonware.xyz/) primitives. Rather than relying on computational work or financial stake, our system anchors security in the physical reality of network infrastructure and geographic distribution. Through continuous network performance verification and careful architectural design, we create a system that becomes exponentially more secure as it grows while remaining accessible to new participants.
 
-## Introduction
+<div class="feature-grid">
+<div class="feature-card">
+### Geographic Decentralization by Design
 
-Current blockchain consensus mechanisms face significant challenges:
+Traditional blockchain networks often claim decentralization while actually concentrating power in a few geographic locations. Rømer Chain takes a different approach by making physical distribution a core system requirement. Our network divides into distinct regions based on major internet exchanges and submarine cable landing points, with each region maintaining its own validator set.
 
-- Proof of Work consumes massive energy resources
-- Proof of Stake requires large capital lockup
-- Both tend toward centralization
-- Security costs scale linearly with protected value
-- MEV extraction centralizes value capture
+This geographic distribution isn't just a feature—it's a fundamental security mechanism. By requiring validators to demonstrate consistent network performance that matches their claimed location's physical characteristics, we ensure that decentralization exists in reality, not just in theory. The network continuously monitors inter-node latencies and performance metrics, using these measurements to verify the physical distribution of infrastructure.
 
-Proof of Physics, built on Simplex Consensus and Commonware primitives, addresses these challenges by:
+The system's security grows exponentially with each new region added, as attacking the network would require compromising multiple physically separated locations simultaneously. This creates true decentralization that becomes stronger as the network expands, rather than trending toward centralization over time.
+</div>
 
-- Leveraging existing network infrastructure 
-- Requiring geographic distribution
-- Creating jurisdictional complexity
-- Verifying physical hardware through ZK proofs
-- Making attacks exponentially harder to coordinate
-- Maintaining Simplex's 2-hop block times
-- Preserving optimal finalization latency
-- Distributing value capture across regions
-- Rewarding actual contributions
+<div class="feature-card">
+### Built-in MEV Protection
 
-## System Architecture
+Rømer Chain's geographic architecture provides natural protection against Maximal Extractable Value (MEV) extraction. In traditional blockchain networks, MEV often concentrates in the hands of a few sophisticated actors who can exploit their position in the network topology. Our system fundamentally changes this dynamic through its regional design.
 
-### Commonware Integration
+Transactions naturally flow through local validators first, creating regional price discovery and reducing opportunities for global front-running. The physical distance between regions, combined with the speed of light constraints in network communication, creates natural timing barriers that prevent centralized MEV extraction. No single actor can gain a network-wide timing advantage because the system's geographic distribution enforces fair access to transaction flow.
 
-The system is built on core Commonware primitives:
+This protection extends beyond just MEV. The regional architecture also enables more efficient market making, as local validators can provide optimal service to their geographic area while still participating in global consensus. This creates a fairer, more efficient market structure that benefits all participants rather than concentrating advantages in a few hands.
+</div>
 
-1. Commonware P2P
-2. Commonware Storage
-3. Commonware Runtime
-4. Commonware Consensus (Simplex)
+<div class="feature-card">
+### Accessible Participation Model
 
-### Geographic Distribution
-The network is divided into distinct regions based on major internet exchanges and submarine cable landing points. One validator can be active leader per region, with selection based on sustained network performance rather than computational work or stake.
+Instead of requiring massive computational resources or large financial stakes, Rømer Chain bases validator qualification on sustained network performance and geographic positioning. This creates an accessible entry path for new validators while maintaining robust security guarantees.
 
-### Validator Requirements
-Validators must:
+Validators prove their legitimacy through consistent demonstration of network capabilities and regional presence. The system continuously monitors basic performance metrics like latency, throughput, and uptime, using these measurements to verify that validators are maintaining appropriate infrastructure. This constant verification through normal network traffic provides strong security guarantees without requiring complex cryptographic proofs or large capital lockups.
 
-- Maintain physical hardware (no cloud providers)
-- Demonstrate geographic presence 
-- Provide high-quality network connections
-- Pass hardware attestation via ZK proofs
-- Meet performance standards
-- Maintain infrastructure
+This approach makes validator participation more accessible while actually improving network security. Rather than having to acquire large token stakes or specialized mining hardware, prospective validators can focus on providing reliable, high-quality network infrastructure in their region. This aligns validator incentives with network health and creates a more sustainable, accessible path to participation.
+</div>
+</div>
 
-### Zero-Knowledge Hardware Attestation
-Validators submit ZK proofs using halo2 to verify:
+Our proof of physics system represents a practical approach to blockchain security that leverages fundamental physical constraints and network topology. By anchoring security in physical reality rather than computational work or financial stake, we create a system that remains accessible to new participants while providing robust protection against various forms of attack and manipulation.
 
-- Physical hardware characteristics
-- Geographic location
-- Network path validity
-- Infrastructure control
-- Performance capabilities
-- Timing constraints
-
-Proofs are required:
-
-- On network join (comprehensive)
-- Per epoch (verification)
-- On challenge (random checks)
-
-## Security Model
-
-### Physical Security
-Security is anchored in:
-
-- Speed of light constraints
-- Physical infrastructure requirements
-- Network topology
-- Geographic distribution
-- Hardware attestation
-- Infrastructure control
-
-### Jurisdictional Security
-The system gains security through:
-
-- Multiple legal jurisdictions
-- Local operator relationships
-- Regional diversity
-- Infrastructure ownership
-- Network path validation
-- Operator incentives
-
-### Attack Resistance
-Primary threats:
-
-- Cloud providers
-- Infrastructure operators
-- Nation-state actors
-
-Defense mechanisms:
-
-1. Physical Constraints
-- Hardware must be physical not virtual
-- Network paths verified
-- Geographic distribution enforced
-- Performance requirements
-- Infrastructure validation
-
-2. Jurisdictional Complexity
-- Multiple legal frameworks
-- Local business relationships
-- Regional operations
-- Infrastructure ownership
-- Operator incentives
-
-3. Simplex Consensus Protection
-- 2-hop block propagation
-- 3-hop finalization
-- Fast attack recovery
-- Network resilience
-- Block verification
-- Performance optimization
-
-4. Economic Security
-- Local operator profitability
-- Infrastructure investment
-- Business relationships
-- Market dynamics
-- Long-term alignment
-
-## MEV Protection
-
-### Geographic Distribution Benefits
-
-1. Network Topology Protection
-- Validators physically distributed
-- Multiple network paths
-- Regional latency advantages neutralized
-- Front-running more difficult
-- No centralized points for MEV extraction
-- Path diversity reduces timing advantages
-- Geographic separation enforces fairness
-
-2. Regional Transaction Flow
-- Transactions naturally flow through local validators
-- Regional price discovery
-- Reduced global arbitrage opportunities
-- Local market efficiency
-- Distributed order flow
-- Regional market making
-- Fair access to local liquidity
-
-3. Latency-Based Protection
-- Speed of light constraints
-- Physical distance requirements
-- No single point of order flow
-- Geographic arbitrage limitations
-- Timing advantage restrictions
-- Natural network partitioning
-- Fair order propagation
-
-## Performance Characteristics
-
-### Consensus Speed
-- 2 network hops for block times
-- 3 network hops for finalization
-- Optimized for network latency
-- Geographic distribution balanced with performance
-- Fast recovery from attacks
-- Efficient block propagation
-
-### Network Efficiency
-- Decoupled block broadcast
-- Optimized path selection
-- Regional leadership model
-- Performance-based validation
-- Infrastructure requirements
-- Network path optimization
-
-## Conclusion
-Proof of Physics represents a novel approach to blockchain consensus that combines Simplex Consensus, Commonware primitives, and physical infrastructure requirements to create a secure and truly decentralized network. By requiring validators to maintain physical infrastructure across multiple jurisdictions and continuously prove their capabilities, the system achieves exponential security scaling while maintaining fast finality and low operating costs. 
+More detailed technical specifications about each aspect of the system will be available soon, including comprehensive documentation of our network monitoring mechanisms, regional architecture, and validator qualification process.
