--- a/website/index.qmd
+++ b/website/index.qmd
@@ -2,8 +2,10 @@
 
 Rømer Chain seamlessly connects with your existing FIX infrastructure, enabling traditional finance to step directly into Web3. No custom adapters, no parallel systems - just your familiar FIX protocol trading environment, enhanced with blockchain's transformative capabilities.
 
+<div class="cta-button-container">
 [Meet the Founder →](https://t.me/hariseldon23){.cta-button}
 [See the Pitch Deck →](./content/pitch/index.qmd){.cta-button}
+</div>
 
 <div class="feature-grid">
 <div class="feature-card feature-card">
