--- a/website/content/economics/index.qmd
+++ b/website/content/economics/index.qmd
@@ -1,88 +1,46 @@
-# RØMER Chain: An Austrian Economic Framework for Sustainable Blockchain Infrastructure
+# RØMER Chain Economics: Market-Driven Infrastructure
 
-RØMER Chain represents a fundamental reimagining of blockchain economics, grounded in Austrian economic principles and designed to create sustainable, market-driven infrastructure. Our economic model addresses the core challenges that have historically plagued blockchain networks: volatile computation costs, unstable validator economics, and misaligned incentives during market downturns.
+RØMER Chain represents a fundamental reimagining of blockchain economics. Our model creates sustainable, market-driven infrastructure by addressing the core challenges that have historically plagued blockchain networks: volatile transaction costs, misaligned incentives during market cycles, and artificial supply constraints. By embracing Austrian economic principles, we've designed a system where genuine market forces drive both price discovery and supply adjustment.
 
-## Core Economic Principles
+<div class="feature-grid">
+<div class="feature-card">
+### Predictable Transaction Costs
 
-RØMER's economic model rests on three foundational pillars that work in concert to create a self-sustaining system:
+At the heart of RØMER's economic model lies our commitment to stable, predictable transaction costs. Unlike traditional blockchain networks where fees fluctuate wildly based on network congestion, RØMER maintains consistent nominal costs across all market conditions. This stability is achieved not through artificial price controls, but through our sophisticated supply adjustment mechanism.
 
-### Market-Driven Supply Dynamics
+When network usage exceeds our base capacity, the system mints new tokens in direct proportion to the increased demand. During periods of reduced activity, the system automatically burns more tokens than it creates, naturally contracting supply to maintain price stability. This bidirectional flexibility ensures that businesses can accurately forecast their operational costs while allowing genuine market forces to determine the network's overall value.
 
-At the heart of RØMER's economic model lies a sophisticated supply adjustment mechanism that responds organically to market conditions. Unlike traditional blockchain networks that rely on rigid emission schedules, RØMER's supply both expands and contracts based on actual network usage. This bidirectional flexibility ensures that token supply accurately reflects genuine market demand for computation resources.
+The result is an environment where companies can build long-term strategies without worrying about unpredictable spikes in transaction costs. Whether you're executing trades during peak market hours or settling transactions during quiet periods, the cost remains consistent and predictable.
+</div>
 
-When network usage falls below the base threshold, the system automatically burns more tokens than it emits, creating natural supply contraction that helps maintain real economic value. Conversely, during periods of high demand, new supply enters the market only in response to genuine demand for computation that exceeds the network's base capacity.
+<div class="feature-card">
+### Natural Market Cycle Response
 
-### Fixed Computation Costs
+Traditional blockchain networks often struggle with extreme volatility during market cycles. Bull markets lead to unsustainable token price appreciation, while bear markets can threaten network security as validator rewards lose value. RØMER's economic model transforms these challenges into strengths through careful mechanism design.
 
-RØMER maintains stable, predictable costs for network computation across all market conditions. This stability is achieved through our dynamic supply adjustment mechanism rather than through artificial price controls. By allowing supply to respond to demand while keeping computation costs fixed in nominal terms, we create an environment where businesses can plan and budget effectively regardless of market conditions.
+During bull markets, our model prevents excessive price appreciation by automatically increasing token supply in response to genuine demand. New tokens are only minted when network usage exceeds base capacity, ensuring that supply expansion directly reflects real utility rather than speculation. This creates natural price resistance and helps maintain computational cost stability even during periods of intense activity.
 
-### Counter-Cyclical Validator Economics
+In bear markets, our system becomes naturally deflationary. As network usage decreases below the base threshold, the automatic burning mechanism reduces total supply more quickly than new tokens are created. This supply contraction helps maintain the real value of validator rewards and creates natural price support during market downturns. The result is a system that remains economically sustainable across all market conditions.
+</div>
 
-Traditional blockchain networks often struggle during market downturns as declining token prices reduce validator rewards in real terms. RØMER's economic model turns this challenge into a strength through a unique counter-cyclical design. During periods of reduced network activity, the proportional increase in token burning reduces total supply, helping maintain the real value of validator rewards even as nominal network activity declines.
+<div class="feature-card">
+### Immediate Market Liquidity
+
+RØMER takes a radical approach to token distribution: all tokens are fully liquid from day one. We reject the complex vesting schedules and artificial lockups that have become common in blockchain projects, believing instead in immediate price discovery and market-driven supply management.
+
+This approach aligns with our Austrian economic principles by allowing genuine market forces to determine token value from the start. Rather than artificially constraining supply through vesting schedules, we rely on our dynamic adjustment mechanisms to maintain economic stability. Early contributors, whether they're venture capitalists, validators, or developers, can make their own decisions about token holdings based on their market outlook and time preferences.
+
+The absence of vesting cliffs and lockups creates several advantages. First, it enables rapid price discovery, helping establish true market equilibrium from day one. Second, it eliminates the market uncertainty and selling pressure that typically occurs around vesting events. Finally, it creates a more equitable environment where all participants operate under the same conditions from the beginning.
+</div>
+</div>
 
 ## Comprehensive Documentation
 
-Our economic documentation is organized into several key sections that detail different aspects of the system:
+Our economic documentation provides in-depth exploration of these mechanisms:
 
-### Economic Model
-The [Economic Model](model.qmd) section provides a detailed examination of RØMER's core economic mechanisms, including:
+* [Economic Model](model.qmd) - Detailed examination of core economic mechanisms and supply adjustment formulas
+* [Token Distribution](distribution.qmd) - Complete overview of our market-driven distribution approach
+* [Market Dynamics](market.qmd) - Analysis of price discovery and market cycle responses
+* [Validator Economics](validators.qmd) - Comprehensive review of validator incentives and sustainability
 
-- Supply adjustment formulas
-- Base computation threshold calculations
-- Market equilibrium mechanics
-- Fee burning dynamics
-
-### Token Distribution
-The [Token Distribution](distribution.qmd) documentation covers:
-
-- Initial token allocation
-- Treasury management
-- Burn reserve mechanics
-
-### Market Dynamics
-Our [Market Dynamics](market.qmd) section explores:
-
-- Price discovery mechanisms
-- Supply and demand interactions
-- Market cycle responses
-- MEV economics
-
-### Validator Economics
-The [Validator Economics](validators.qmd) documentation details:
-
-- Reward structures
-- Economic incentives
-- Operational considerations
-- Long-term sustainability
-
-## Austrian Economic Foundations
-
-RØMER's economic design draws heavily from Austrian economic principles, particularly:
-
-1. Natural Price Discovery: All prices in the system emerge from genuine market activity rather than central planning or arbitrary formulas.
-
-2. Sound Money Principles: Token supply adjusts bidirectionally based on real market demand, creating natural monetary properties.
-
-3. Time Preference: The model acknowledges and accounts for varying time preferences among market participants.
-
-4. Economic Calculation: Fixed nominal costs enable proper economic calculation for businesses and developers.
-
-## Market-Driven Evolution
-
-While RØMER's economic principles remain constant, the specific parameters that govern network operation can evolve through community governance. This evolution follows strict Austrian principles:
-
-- Parameter adjustments require clear market signals
-- Changes must emerge from community consensus
-- Modifications follow predetermined governance processes
-- Evolution maintains core economic principles
-
-## Getting Started
-
-To understand RØMER's economics in detail, we recommend following this reading order:
-
-1. Start with the [Economic Model](model.qmd) to understand core mechanisms
-2. Review the [Token Distribution](distribution.qmd) to learn about supply management
-3. Explore [Market Dynamics](market.qmd) to understand price discovery
-4. Study [Validator Economics](validators.qmd) for operational implications
-
-Each section builds on previous concepts while maintaining RØMER's commitment to Austrian economic principles and sustainable blockchain infrastructure.
+Each section builds on these foundational concepts while maintaining our commitment to Austrian economic principles and sustainable blockchain infrastructure. Through this documentation, you'll gain a complete understanding of how RØMER creates a truly market-driven blockchain economy.
